--- a/velada_del_ano_2/inicio.html
+++ b/velada_del_ano_2/inicio.html
@@ -40,7 +40,7 @@
 		</ul>
 		<ul class="nav-menu-right">
 			<li>
-				<a href="#">
+				<a href="menu/video.html">
 					<i class="fa-regular fa-circle-play"></i>
 				</a>
 			</li>
