--- a/velada_del_ano_2/menu/creadores.html
+++ b/velada_del_ano_2/menu/creadores.html
@@ -39,7 +39,7 @@
 		</ul>
 		<ul class="nav-menu-right">
 			<li>
-				<a href="#">
+				<a href="video.html">
 					<i class="fa-regular fa-circle-play"></i>
 				</a>
 			</li>
