--- a/velada_del_ano_2/menu/jugar.html
+++ b/velada_del_ano_2/menu/jugar.html
@@ -43,7 +43,7 @@
 		</ul>
 		<ul class="nav-menu-right">
 			<li>
-				<a href="#">
+				<a href="video.html">
 					<!-- <i class="fa-solid fa-volume-xmark"></i>
 					<i class="fa-solid fa-volume-high"></i> -->
 					<i class="fa-regular fa-circle-play"></i>
